# apod-wallpaper

./: flake.nix  pyproject.toml
src/apod_wallpaper/: ApodWallpaper.py  ApodWallpaperSwitcher.py  __init__.py
src/apod_wallpaper/systems/: Hyprland.py  Plasma.py  Systems.py  helpers.py
